--- a/src/SASS/components/banner.scss
+++ b/src/SASS/components/banner.scss
@@ -2,18 +2,27 @@
     height: 200px; 
     position: relative;
     overflow: hidden;   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;    
-    background-repeat: no-repeat;
-    background-position: center;
-    background-blend-mode: darken;
     border-radius: 20px;
 
+    img {
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
     h1 {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        vertical-align: middle;
         color: white;
         font-size: 55px;
         text-shadow: 2px 2px 2px black;
+        z-index: 0;
     }
 }
