--- a/src/SASS/components/banner.scss
+++ b/src/SASS/components/banner.scss
@@ -12,6 +12,12 @@
         object-fit: cover;
     }
 
+    .fond {
+        background-color: rgba(0,0,0,0.6);
+        height: 100%;
+        width: 100%;
+    }
+
     h1 {
         position: absolute;
         top: 0px;
@@ -19,10 +25,9 @@
         height: 100%;
         width: 100%;
         text-align: center;
-        vertical-align: middle;
-        color: white;
+        color: rgb(255,255,255);
         font-size: 55px;
         text-shadow: 2px 2px 2px black;
-        z-index: 0;
+        z-index: 1;
     }
 }
