--- a/src/SASS/base/variables.scss
+++ b/src/SASS/base/variables.scss
@@ -1,15 +1,11 @@
-.footer {
-    width: 100%;
-    height: 209px;
-    background-color: black;
-    color: white;       
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
+$colors: (
+    primary: #FF6060,
+    white: #ffffff
+);
 
-    &__text {
-        font-size: 18px;
-    }
-}
+$breakpoints: (
+    mobile: 1023.98px,
+    desktop: 1024px
+);
+
+$gap: 5%;
