--- a/src/SASS/components/banner.scss
+++ b/src/SASS/components/banner.scss
@@ -10,6 +10,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        
     }
 
     .fond {
@@ -20,14 +21,23 @@
 
     h1 {
         position: absolute;
-        top: 0px;
-        left: 0px;
-        height: 100%;
+        top: 20px;
         width: 100%;
         text-align: center;
         color: rgb(255,255,255);
         font-size: 55px;
         text-shadow: 2px 2px 2px black;
         z-index: 1;
+    }
+}
+
+@media (max-width : 1023.98px) {
+    .banner {               
+        height: 20vh;
+        h1 {
+            font-size: 4vh;
+            text-align: left;
+            padding-left: 20px;
+        }
     }
 }
