--- a/src/SASS/index.scss
+++ b/src/SASS/index.scss
@@ -2,3 +2,4 @@
 @import "./base/variables.scss";
 @import "./components/footer.scss";
 @import "./components/header.scss";
+@import "../SASS/components/banner.scss";
