--- a/src/components/CardsList/Card/Card.scss
+++ b/src/components/CardsList/Card/Card.scss
@@ -1,10 +1,29 @@
-.ficheLogement {
 
-    width: 25%;
-    margin: 1em;
-    background-color: cadetblue;
+.ficheLogement {
+    display: flex;
+    flex-direction: column;
+    width: 28%;
+    height: 11em;
+    margin: 1em;    
+    border-radius: 15px;
+    text-decoration: none;
+
+
 
     img {
         width: 100%;
+        object-fit: cover;
+        height: 8em;
+        border-radius: 10px 10px 0 0;
+
     }
+
+    h1 {
+        display: flex;     
+        font-size: 13px;
+        padding-left: 10px;
+        align-items: center;
+
+}
+
 }
