--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -1,3 +1,4 @@
+
 .collapse {
 	.fa-chevron-up {
 		transition: all 1s;
@@ -12,6 +13,31 @@
           animation: fadeOut 0.6s ease forwards;
 	}
 }
+
+.collapse-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+  
+  
+    span {
+        padding-left: 5px;
+        padding: 10px;
+        
+    }
+  
+    button {
+  
+       
+        border: none;
+       
+        padding-right: 20px;
+        cursor: pointer;
+  
+    }
+  }
+
 .collapse.collapsed {
 	.fa-chevron-up {
 		transform: rotate(-180deg);
