--- a/src/SASS/base/variables.scss
+++ b/src/SASS/base/variables.scss
@@ -1,6 +1,8 @@
 $colors: (
     primary: #FF6060,
-    white: #ffffff
+    secondary: #f6f6f6,
+    tertiary: #ffffff,
+    none: transparent
 );
 
 $breakpoints: (
