--- a/src/SASS/components/header.scss
+++ b/src/SASS/components/header.scss
@@ -26,11 +26,13 @@
         width: 100%;
 
         img {
-            width: 20%;
+            max-width: 30vw;  
+            display: block;
+            width: 100%;
         }
 
         nav {
-            font-size: small;
+            font-size: 2vh;
             text-transform: uppercase;
             font-weight: bold;
         }
