--- a/src/SASS/base/base.scss
+++ b/src/SASS/base/base.scss
@@ -1,5 +1,11 @@
 @import "./variables.scss";
 
+@mixin mediamobile() {	
+    @media screen and (max-width: map-get($breakpoints, mobile)){
+        @content;
+    }
+}
+
 body {
     margin: 0;
     font-family: 'Montserrat';
@@ -13,6 +19,8 @@ body {
 
     .background-#{$name} {
         background-color: $color;
+        display: flex;
+        flex-wrap: wrap;
     }
 }
 
@@ -22,6 +30,15 @@ body {
     }
     .col-mobile-1 {
         width: 100%;
+        margin-top: 2%;
+    }
+    .d-block {
+        display: block;
+    }
+
+    .d-flex-column {
+        display: flex;
+        flex-direction: column;
     }
 }
 
@@ -32,13 +49,10 @@ body {
     .col-desktop-1 {
         width: 100%;
     }
-    .col-desktop-3 {
-        width: calc((100% - $gap * 2) / 3);
+    .col-desktop-2 {
+        width: calc((100% - $gap) / 2);
     }
-}
-
-@mixin mediamobile() {	
-    @media screen and (max-width: map-get($breakpoints, mobile)){
-        @content;
+    .col-desktop-3 {
+        width: calc((100% - $gap * 3) / 3);
     }
 }
