--- a/src/SASS/index.scss
+++ b/src/SASS/index.scss
@@ -3,3 +3,10 @@
 @import "./components/footer.scss";
 @import "./components/header.scss";
 @import "../SASS/components/banner.scss";
+@import "../components/Collapse/collapse.scss";
+@import "../components/CardsList/Card/Card.scss";
+@import "../components/Error/error.scss";
+@import "../components/Slide/Slide.scss";
+@import "../Pages/Accueil/accueil.scss";
+@import "../Pages/Logements/logements.scss";
+@import "../Pages/Apropos/apropos.scss";
