--- a/src/components/CardsList/Card/Card.scss
+++ b/src/components/CardsList/Card/Card.scss
@@ -3,17 +3,19 @@
     display: flex;
     flex-direction: column;
     width: 28%;
-    height: 11em;
+    height: 15em;
     margin: 1em;    
     border-radius: 15px;
     text-decoration: none;
 
-
+    @include mediamobile() {
+        margin-left: 0;
+    }
 
     img {
         width: 100%;
         object-fit: cover;
-        height: 8em;
+        height: 12em;
         border-radius: 10px 10px 0 0;
 
     }
