--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -1,17 +1,30 @@
 
 .collapse {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+
 	.fa-chevron-up {
 		transition: all 1s;
 		transform: rotate(0deg);
 	}
+	  .collapse-content-wrapper {
+    overflow: hidden;
+  }
 	.collapse-content {
-        display: flex;
-        flex-direction: column;
-          z-index: 1;          
-          overflow: hidden;        
-          border-radius: 0 0 5px 5px;
-          animation: fadeOut 0.6s ease forwards;
+    animation: dropdown-up 1s forwards;
+    flex-direction: column;
+    overflow: hidden;
+    border-radius: 0 0 5px 5px;
+    ul {
+      padding-inline-start: 0px; 
+      writing-mode: horizontal-tb;
+    }
 	}
+
+  .collapse-content-inner {
+    padding: 2%;
+  }
 }
 
 .collapse-header {
@@ -19,22 +32,17 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 5px;
-  
+    z-index: 50;
   
     span {
         padding-left: 5px;
         padding: 10px;
-        
     }
   
     button {
-  
-       
         border: none;
-       
         padding-right: 20px;
         cursor: pointer;
-  
     }
   }
 
@@ -42,32 +50,42 @@
 	.fa-chevron-up {
 		transform: rotate(-180deg);
 	}
-	.collapse-content {
-		animation: fadeIn 0.6s ease forwards;
-	}
+
+    .collapse-content-wrapper {
+        height: auto;
+      }
+        .collapse-content {
+        animation: dropdown-down 1s forwards;
+        overflow: hidden;
+        visibility: visible;
+        display: flex;
+        }
 }
 
-@keyframes fadeIn {
+@keyframes dropdown-down {
     0% {
-      opacity: 0;
-      transform: translateY(-20%);
+      //opacity: 0;
+      transform: translateY(-100%);
+      height: 0;
     }
+
     100% {
+        // opacity: 1;
+        transform: translateY(0);
+        height: auto;
+      }
+}
+
+@keyframes dropdown-up {
+    0% {
+      // opacity: 1;
+      transform: translateY(0);
       height: auto;
-      opacity: 1;
-      transform: translateY(0);
-
-    }
-  }
-
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-      transform: translateY(0);
     }
     100% {
-      opacity: 1;
-      transform: translateY(-30%);
+      // opacity: 0;
+      transform: translateY(-100%);
+      visibility: hidden;
       height: 0;
     }
   }
