Affichage logements + carrousel

--- a/src/SASS/index.scss
+++ b/src/SASS/index.scss
@@ -6,7 +6,7 @@
 @import "../components/Collapse/collapse.scss";
 @import "../components/CardsList/Card/Card.scss";
 @import "../components/Error/error.scss";
-@import "../components/Slide/Slide.scss";
+@import "../components/SlideShow/SlideShow.scss";
 @import "../Pages/Accueil/accueil.scss";
 @import "../Pages/Logements/logements.scss";
 @import "../Pages/Apropos/apropos.scss";
