--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -39,7 +39,7 @@
         padding: 10px;
     }
   
-    button {
+    .button {
         border: none;
         padding-right: 20px;
         cursor: pointer;
@@ -62,11 +62,19 @@
         }
 }
 
+.collapse.initial-collapsed {
+    .collapse-content {
+      animation: none !important;
+      opacity: 0;
+      height:0;
+    }
+  }
+
 @keyframes dropdown-down {
     0% {
-      //opacity: 0;
+      opacity: 0;
       transform: translateY(-100%);
-      height: 0;
+      max-height: 0;
     }
 
     100% {
@@ -78,7 +86,7 @@
 
 @keyframes dropdown-up {
     0% {
-      // opacity: 1;
+      
       transform: translateY(0);
       height: auto;
     }
