--- a/src/SASS/components/banner.scss
+++ b/src/SASS/components/banner.scss
@@ -4,6 +4,10 @@
     overflow: hidden;   
     border-radius: 20px;
 
+    @include mediamobile() {
+        height: 20vh;
+    }
+
     img {
         position: absolute;
         z-index: -1;
@@ -14,7 +18,7 @@
     }
 
     .fond {
-        background-color: rgba(0,0,0,0.6);
+        background-color: rgba(0, 0, 0, 0.6);
         height: 100%;
         width: 100%;
     }
@@ -24,17 +28,12 @@
         top: 20px;
         width: 100%;
         text-align: center;
-        color: rgb(255,255,255);
+        color: rgb(255, 255, 255);
         font-size: 55px;
         text-shadow: 2px 2px 2px black;
         z-index: 1;
-    }
-}
 
 @include mediamobile() {
-    .banner {              
-        height: 20vh;
-        h1 {
             font-size: 3.5vh;
             text-align: left;
             padding-left: 20px;
