--- a/src/components/Error/error.scss
+++ b/src/components/Error/error.scss
@@ -1,4 +1,3 @@
-
 .error-container {
     display: flex;
     flex-direction: column;
@@ -12,18 +11,23 @@
         margin-bottom: 8rem;
         font-size: 1rem;
     }
-
 }
 
 .error-code {
-    
-    font-size: 10rem;
-    font-weight: bold;
-    margin-bottom: 5rem;
+    font-size: 200px;
+    font-weight: bold !important;
+    margin-bottom: 30px; 
+    margin-top: 30px;
 }
+
+@include mediamobile() {
+    .error-code {
+        font-size: 100px;
+    }
+    }
 
 .error-message {
     text-align: center;
-    margin-bottom: 7rem;
-    font-weight: bold;
+    margin-bottom: 100px;
+    font-weight: bold !important;
 }
