--- a/src/components/SlideShow/SlideShow.scss
+++ b/src/components/SlideShow/SlideShow.scss
@@ -8,7 +8,9 @@
 .SlideShow {
     max-height: 400px;
     display: flex;
-
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .slidesWrapper {
@@ -17,6 +19,7 @@
     flex-wrap: wrap;
     width: 100%;
     overflow: hidden;
+    height: 400px; /* Taille fixe du conteneur */
 
     @include mediamobile() {
         height: 11rem;
@@ -29,8 +32,14 @@
         object-fit: cover;
         object-position: center;
         border-radius: 25px;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out; /* Animation d'opacité */
     }
+    
+    .fade-in {
+        opacity: 1;
 }
+    }
 
 .slideshow-pagination {
     position: absolute;
